--- a/htmlcss1-9/ex1-9.html
+++ b/htmlcss1-9/ex1-9.html
@@ -4,29 +4,40 @@
     <meta charset="UTF-8" />
     <!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="ex1-9.css" />
-    <title>1-8</title>
+    <title>演習s1-9</title>
   </head>
 
   <body>
-      <header>
-      </header>
+      <header></header>
 
       <main>
-        <div class="contents-list">
-          <div class="contents1">
-            <h3>タイトルが入ります</h3>
-            <p>文章が入ります。</p>
-          </div>
-          <div class="contents2"></div>
-          <div class="contents3"></div>
-
+        <div class="step-list">
+          <div class="step-img1"></div>
+          <span class="step-num">step1</span>
+          <h3 class="title">タイトルが入ります</h3>
+          <p class="text">
+            文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+          </p>
         </div>
 
+        <div class="step-list">
+          <div class="step-img2"></div>
+          <span class="step-num">step2</span>
+          <h3 class="title">タイトルが入ります</h3>
+          <p class="text">
+            文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+          </p>
+        </div>
+
+        <div class="step-list">
+          <div class="step-img3"></div>
+          <span class="step-num">step3</span>
+          <h3 class="title">タイトルが入ります</h3>
+          <p class="text">
+            文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+          </p>
+        </div>
       </main>
-
-
-
-
       <footer></footer>
   </body>
 </html>
